--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Snake Game</title>
   </head>
   <body>
+    <div class="score">Score: 0</div>
     <div id="snake-board"></div>
   </body>
 </html>
