--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <title>Snake Game</title>
   </head>
   <body>
-    <div class="score">Score: 0</div>
+    <div class="game-info">
+      <h1>SnakeEx</h1>
+      <div class="button-container">
+        <h3>Select difficulty level:-</h3>
+        <button id="easy">Easy</button>
+        <button id="medium">Medium</button>
+        <button id="hard">Hard</button>
+      </div>
+      <div class="score">Score: 0</div>
+    </div>
     <div id="snake-board"></div>
   </body>
 </html>
